add age gender..

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -5923,11 +5923,516 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### add two_year_recid as factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_all = compas_two_year.loc[:,['sex','age_cat','race','priors_count.1','c_charge_degree','two_year_recid']]\n",
+    "X_all = pd.get_dummies(X_all)\n",
+    "y = compas_two_year['decile_score.1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:         decile_score.1   R-squared:                       0.425\n",
+      "Model:                            OLS   Adj. R-squared:                  0.424\n",
+      "Method:                 Least Squares   F-statistic:                     484.1\n",
+      "Date:                Thu, 25 Apr 2019   Prob (F-statistic):               0.00\n",
+      "Time:                        23:36:47   Log-Likelihood:                -15811.\n",
+      "No. Observations:                7214   AIC:                         3.165e+04\n",
+      "Df Residuals:                    7202   BIC:                         3.173e+04\n",
+      "Df Model:                          11                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "const                       1.2254      0.046     26.849      0.000       1.136       1.315\n",
+      "priors_count.1              0.2505      0.006     42.801      0.000       0.239       0.262\n",
+      "two_year_recid              0.8383      0.055     15.242      0.000       0.730       0.946\n",
+      "sex_Female                  0.6643      0.043     15.518      0.000       0.580       0.748\n",
+      "sex_Male                    0.5610      0.037     15.288      0.000       0.489       0.633\n",
+      "age_cat_25 - 45             0.3187      0.036      8.736      0.000       0.247       0.390\n",
+      "age_cat_Greater than 45    -1.1833      0.047    -24.975      0.000      -1.276      -1.090\n",
+      "age_cat_Less than 25        2.0900      0.049     42.778      0.000       1.994       2.186\n",
+      "race_African-American       0.8146      0.107      7.617      0.000       0.605       1.024\n",
+      "race_Asian                 -0.3005      0.334     -0.899      0.369      -0.956       0.355\n",
+      "race_Caucasian              0.1558      0.109      1.435      0.151      -0.057       0.369\n",
+      "race_Hispanic              -0.1866      0.125     -1.497      0.134      -0.431       0.058\n",
+      "race_Native American        1.3917      0.437      3.188      0.001       0.536       2.247\n",
+      "race_Other                 -0.6497      0.138     -4.707      0.000      -0.920      -0.379\n",
+      "c_charge_degree_F           0.7997      0.035     22.791      0.000       0.731       0.868\n",
+      "c_charge_degree_M           0.4257      0.036     11.833      0.000       0.355       0.496\n",
+      "==============================================================================\n",
+      "Omnibus:                      246.697   Durbin-Watson:                   2.004\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              271.757\n",
+      "Skew:                           0.473   Prob(JB):                     9.74e-60\n",
+      "Kurtosis:                       2.912   Cond. No.                     2.34e+17\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 4.91e-30. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_all = sm.add_constant(X_all) # adding a constant\n",
+    "\n",
+    "model = sm.OLS(y, X_all).fit()\n",
+    "predictions = model.predict(X_all) \n",
+    "\n",
+    "print_model = model.summary()\n",
+    "print(print_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Black defendants are 45% more likely than white defendants to receive a higher score correcting for the seriousness of their crime, previous arrests, and future criminal behavior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control = 1.2254 / (1 + 1.2254)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coef_score(control, coef):\n",
+    "    return coef / (1 - control + (control * coef))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Race"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "race_African-American "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9072169981822338"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control,0.8146)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "race_Asian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0585111005270451"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control,-0.3005)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "race_Caucasian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2911346691976904"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control, 0.1558)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "race_Hispanic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.5383610939274589"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control, -0.1866 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "race_Native American "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.144785084118655"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control,1.3917)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sex_male"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7398440510275449"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control,0.5610)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sex_Female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.814942749504885"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control,0.6643)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "age_cat_Less than 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3060864017325051"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control,2.0900)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "age_cat_25 - 45"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.510044687980449"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control,0.3187)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "age_cat_Greater than 45 \n",
+    "？？？？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.8516072168307325"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control, -1.1833)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### prior crimes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors_count.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### instead of predicting compas score, predict recidvism "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_recid = compas_two_year.loc[:,['sex','age_cat','race','priors_count.1','c_charge_degree']]\n",
+    "X_recid = pd.get_dummies(X_recid)\n",
+    "y_recid = compas_two_year['two_year_recid']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:         two_year_recid   R-squared:                       0.130\n",
+      "Model:                            OLS   Adj. R-squared:                  0.129\n",
+      "Method:                 Least Squares   F-statistic:                     107.9\n",
+      "Date:                Thu, 25 Apr 2019   Prob (F-statistic):          8.67e-210\n",
+      "Time:                        23:21:49   Log-Likelihood:                -4697.0\n",
+      "No. Observations:                7214   AIC:                             9416.\n",
+      "Df Residuals:                    7203   BIC:                             9492.\n",
+      "Df Model:                          10                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "const                       0.1195      0.010     12.349      0.000       0.101       0.138\n",
+      "priors_count.1              0.0302      0.001     25.079      0.000       0.028       0.033\n",
+      "sex_Female                  0.0254      0.009      2.773      0.006       0.007       0.043\n",
+      "sex_Male                    0.0941      0.008     12.084      0.000       0.079       0.109\n",
+      "age_cat_25 - 45             0.0305      0.008      3.902      0.000       0.015       0.046\n",
+      "age_cat_Greater than 45    -0.1167      0.010    -11.602      0.000      -0.136      -0.097\n",
+      "age_cat_Less than 25        0.2057      0.010     20.202      0.000       0.186       0.226\n",
+      "race_African-American       0.0609      0.023      2.657      0.008       0.016       0.106\n",
+      "race_Asian                 -0.0543      0.072     -0.758      0.448      -0.195       0.086\n",
+      "race_Caucasian              0.0409      0.023      1.758      0.079      -0.005       0.086\n",
+      "race_Hispanic              -0.0015      0.027     -0.054      0.957      -0.054       0.051\n",
+      "race_Native American        0.0792      0.094      0.847      0.397      -0.104       0.263\n",
+      "race_Other                 -0.0057      0.030     -0.193      0.847      -0.064       0.052\n",
+      "c_charge_degree_F           0.0796      0.007     10.678      0.000       0.065       0.094\n",
+      "c_charge_degree_M           0.0398      0.008      5.180      0.000       0.025       0.055\n",
+      "==============================================================================\n",
+      "Omnibus:                       43.857   Durbin-Watson:                   2.017\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              689.720\n",
+      "Skew:                           0.193   Prob(JB):                    1.70e-150\n",
+      "Kurtosis:                       1.535   Cond. No.                     1.09e+17\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 2.23e-29. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_recid = sm.add_constant(X_recid) # adding a constant\n",
+    "\n",
+    "model = sm.OLS(y_recid, X_recid).fit()\n",
+    "predictions = model.predict(X_recid) \n",
+    "\n",
+    "print_model = model.summary()\n",
+    "print(print_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Black defendants are 45% more likely than white defendants to receive a higher score correcting for the seriousness of their crime, previous arrests, and future criminal behavior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control <- exp(-1.52554) / (1 + exp(-1.52554))\n",
+    "exp(0.47721) / (1 - control + (control * exp(0.47721)))"
+   ]
   },
   {
    "cell_type": "markdown",
