--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-165-a821532ba8dd>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-165-a821532ba8dd>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    propublica use r for model summary, we use aquitas\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "propublica use r for model summary, we use aquitas "
+    "propublica use r for model summary, we use aquitas \n",
+    "\n",
+    "how to use aquitas?"
    ]
   },
   {
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 169,
    "metadata": {
     "scrolled": true
    },
@@ -4617,17 +4628,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://stackoverflow.com/questions/32011359/convert-categorical-data-in-pandas-dataframe \n",
-    "\n",
-    "how to convert to category to number "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4636,7 +4638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 171,
    "metadata": {
     "scrolled": true
    },
@@ -5177,8 +5179,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge 1: cannot directly use sex, age_cat, race, etc, because they are categorical, not number "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/32011359/convert-categorical-data-in-pandas-dataframe \n",
+    "\n",
+    "A stackoverflow post on how to convert to category to number "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Improve 1: convert categorical to number"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5189,7 +5214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5198,7 +5223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -5207,7 +5232,7 @@
        "Index(['sex', 'age_cat', 'race'], dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5218,7 +5243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5227,7 +5252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 176,
    "metadata": {
     "scrolled": true
    },
@@ -5759,7 +5784,7 @@
        "[4743 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5770,7 +5795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5795,15 +5820,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## cannot directly use sex, age_cat, race because they are categorical, not number "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5822,7 +5840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -5831,20 +5849,20 @@
        "0.020345969539292685"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "OLS_r2_train"
+    "r2_score(y_train, pred_reg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### improve 2 dummy value"
+    "### Improve 2 Dummy value"
    ]
   },
   {
@@ -5926,7 +5944,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### add two_year_recid as factor"
+    "### Add two_year_recid as factor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "r2 improves from 0.407 to 0.425"
    ]
   },
   {
@@ -6001,13 +6026,6 @@
     "\n",
     "print_model = model.summary()\n",
     "print(print_model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Black defendants are 45% more likely than white defendants to receive a higher score correcting for the seriousness of their crime, previous arrests, and future criminal behavior."
    ]
   },
   {
@@ -6329,24 +6347,83 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "priors_count.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4265329836880578"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control, 0.2505)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### instead of predicting compas score, predict recidvism "
+    "### two_year_recid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9202368849091057"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_score(control, 0.8383)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instead of COMPAS score, predict recidvism "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are interested in how accurate a simple OLS model will be using sex, age_cat, race, prior_counts, c_charge_degree factors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6421,29 +6498,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Black defendants are 45% more likely than white defendants to receive a higher score correcting for the seriousness of their crime, previous arrests, and future criminal behavior."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "control <- exp(-1.52554) / (1 + exp(-1.52554))\n",
-    "exp(0.47721) / (1 - control + (control * exp(0.47721)))"
+    "It turns out that r2 is pretty bad. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### use only age_cat and prior_counts"
+    "Does the fact that those factors predicts COMPAS score far better than real world two-year-recidivism say anything?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use only age_cat and prior_counts to predict COMPAS score "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6510,7 +6584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### only use race"
+    "### Use only race to predict COMPAS score"
    ]
   },
   {
@@ -6653,12 +6727,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### improve 3 predicting category instead of predicting raw score"
+    "#### Improve 3 predicting category instead of predicting raw score (actually does not improve)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -11055,7 +11129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11084,7 +11158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11093,7 +11167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11102,7 +11176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11129,7 +11203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 189,
    "metadata": {
     "scrolled": true
    },
@@ -11143,8 +11217,8 @@
       "Dep. Variable:             score_text   R-squared:                       0.362\n",
       "Model:                            OLS   Adj. R-squared:                  0.361\n",
       "Method:                 Least Squares   F-statistic:                     300.3\n",
-      "Date:                Thu, 25 Apr 2019   Prob (F-statistic):               0.00\n",
-      "Time:                        22:12:37   Log-Likelihood:                -1991.9\n",
+      "Date:                Fri, 26 Apr 2019   Prob (F-statistic):               0.00\n",
+      "Time:                        01:08:25   Log-Likelihood:                -1991.9\n",
       "No. Observations:                5300   AIC:                             4006.\n",
       "Df Residuals:                    5289   BIC:                             4078.\n",
       "Df Model:                          10                                         \n",
